--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,800');
 
 body {
@@ -6,18 +5,45 @@ body {
   font-size: 15px;
 }
 
-/* table */
-table { font-size: 13px;}
-table .small.button { margin-bottom: 0;}
-table thead th { font-weight: 600;}
-
-/* adjust table padding */
-table tbody td, table thead th {
-  padding: .5rem;
-  text-align: center;
+/* navbar */
+header nav.navbar {
+  background: linear-gradient(to right, #161616, #373737);
+  padding: .2rem 1rem;
+  box-shadow: none;
 }
 
-#chart {
-  width: 100%;
+.navbar-brand { margin-right: 80px;}
+.nav-link { font-size: 13px;}
+
+/* search bar */
+.md-form { margin-top: 0;}
+.md-form .form-control {
+  padding: .2rem .5rem;
+  margin: 0;
+  font-size: 13px;
+  width: 200px;
+}
+
+/* table */
+.company { font-size: 11px; opacity: .6;}
+table.table td, table.table th { padding: .2rem 1rem;}
+.table td, .table thead th { vertical-align: middle;}
+table { font-size: 13px; line-height: 18px;}
+table.table a { margin: 0 .3rem;}
+
+.btn-custom-small {
+  font-size: 11px;
+  padding: .5rem 1rem;
+  box-shadow: none;
+  border-radius: 0;
+}
+
+#chart, #portfolio {
+  width: 50%;
   height: 400px;
 }
+
+footer.page-footer { background: linear-gradient(to right, #161616, #373737);}
+footer h5 { opacity: .5;}
+footer a, footer p { font-size: 13px; opacity: .5;}
+footer a:hover { opacity: 1;}
