--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -5,7 +5,8 @@ body {
   font-size: 15px;
 }
 
-/* navbar */
+/* ---------- header ---------- */
+
 header nav.navbar {
   background: linear-gradient(to right, #161616, #373737);
   padding: .2rem 1rem;
@@ -15,7 +16,6 @@ header nav.navbar {
 .navbar-brand { margin-right: 80px;}
 .nav-link { font-size: 13px;}
 
-/* search bar */
 .md-form { margin-top: 0;}
 .md-form .form-control {
   padding: .2rem .5rem;
@@ -24,7 +24,8 @@ header nav.navbar {
   width: 200px;
 }
 
-/* table */
+/* ---------- table ---------- */
+
 .company { font-size: 11px; opacity: .6;}
 table.table td, table.table th { padding: .2rem 1rem;}
 .table td, .table thead th { vertical-align: middle;}
@@ -38,10 +39,49 @@ table.table a { margin: 0 .3rem;}
   border-radius: 0;
 }
 
+/* ---------- diagrams ---------- */
+
 #chart, #portfolio {
-  width: 50%;
-  height: 400px;
+  width: 50%; height: 400px;
 }
+
+/* ---------- trade form ---------- */
+
+#trade .form-control {
+  padding: .3rem .75rem;
+  border-radius: 0;
+}
+
+#trade .btn { margin: 0; }
+#trade input { font-size: 13px;}
+
+#trade .dropdown-menu {
+  font-size: 13px;
+  border-radius: 0;
+}
+
+/* ---------- suggested stock ---------- */
+
+.suggested {
+  width: calc(25% - 34px);
+  display: inline-block;
+  border-radius: 0;
+  border: solid 1px rgba(0,0,0,.3);
+  margin: 15px;
+  padding: 30px;
+}
+
+.suggested img {
+  height: 30px;
+  margin-bottom: 20px;
+  margin-top: 10px;
+}
+
+.suggested .fa { margin-left: 5px;}
+.suggested .fa.fa-arrow-circle-up { color: green;}
+.suggested .fa.fa-arrow-circle-down { color: red;}
+
+/* ---------- footer ---------- */
 
 footer.page-footer { background: linear-gradient(to right, #161616, #373737);}
 footer h5 { opacity: .5;}
