--- a/views/layouts/nema-temp.handlebars
+++ b/views/layouts/nema-temp.handlebars
@@ -3,8 +3,12 @@
 <html>
 <head>
 	<title>Show Me the money</title>
+	<script src = "https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
+	<script src="https://code.jquery.com/jquery.js"></script>
 </head>
 <body>
 {{{body}}}
+
+	
 </body>
 </html>
