--- a/views/layouts/nema-temp.handlebars
+++ b/views/layouts/nema-temp.handlebars
@@ -1,5 +1,6 @@
 {{!-- for nema's testing of Auth --}}
-</!DOCTYPE html>
+
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Show Me the money</title>
@@ -11,6 +12,7 @@
 <body>
 {{{body}}}
 
-	
+	<script src = "../index.js" type = "text/javascript" ></script>
+    <script src= "https://cdnjs.cloudflare.com/ajax/libs/Faker/3.1.0/faker.min.js"></script>
 </body>
 </html>
