--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,6 +2,10 @@
 <html>
 <head>
 	<title>Show Me The Money</title>
+	<script src = "https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src = "./sockets.js"></script>
+	<script src= "https://cdnjs.cloudflare.com/ajax/libs/Faker/3.1.0/faker.min.js"></script>
 </head>
 <body>
 {{{ body }}}
