--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -3,31 +3,81 @@
 body {
   font-family: 'Open Sans', arial, sans-serif;
   font-size: 15px;
+  background: rgba(0,0,0,.1);
 }
+
+.card { border-radius: 0;}
+.my-font-small { font-size: 11px; opacity: .6;}
 
 /* ---------- header ---------- */
 
 header nav.navbar {
-  background: linear-gradient(to right, #161616, #373737);
-  padding: .2rem 1rem;
+  padding: .8rem 1rem;
   box-shadow: none;
+  background: linear-gradient(to right, #161616, #373737);
 }
 
-.navbar-brand { margin-right: 80px;}
+.navbar-brand { margin-right: 60px;}
 .nav-link { font-size: 13px;}
 
 .md-form { margin-top: 0;}
 .md-form .form-control {
-  padding: .2rem .5rem;
+  padding: .3rem .5rem;
   margin: 0;
   font-size: 13px;
   width: 200px;
 }
 
+/* ---------- home page ---------- */
+
+header .view {
+	background: url("../images/bg.jpg") no-repeat center center;
+	background-size: cover;
+	height: calc(100vh + 50px);
+}
+
+#about {
+	background-color: white;
+	padding: 50px 0;
+}
+
+/* ---------- user  ---------- */
+
+#user {
+	background: linear-gradient(to right, #161616, #373737);
+	padding-top: 100px;
+	padding-bottom: 60px;
+}
+
+#content {
+	position: relative;
+	top: -50px;
+	padding: 40px;
+}
+
+#panel-trade .form-control { padding: .3rem .75rem; }
+
+#panel-trade .btn { margin: 0; }
+#panel-trade input { font-size: 13px; border-radius: 0}
+
+#panel-market .suggested {
+	box-shadow: none;
+	border: solid 1px rgba(0,0,0,.5);
+}
+
+#panel-market .suggested img {
+  height: 30px;
+  margin-bottom: 20px;
+  margin-top: 10px;
+}
+
+#panel-market table.table td, table.table th { padding: .2rem 1rem;}
+#panel-market .suggested .fa { margin-left: 5px;}
+#panel-market .suggested .fa.fa-arrow-circle-up { color: green;}
+#panel-market .suggested .fa.fa-arrow-circle-down { color: red;}
+
 /* ---------- table ---------- */
 
-.company { font-size: 11px; opacity: .6;}
-table.table td, table.table th { padding: .2rem 1rem;}
 .table td, .table thead th { vertical-align: middle;}
 table { font-size: 13px; line-height: 18px;}
 table.table a { margin: 0 .3rem;}
@@ -41,49 +91,11 @@ table.table a { margin: 0 .3rem;}
 
 /* ---------- diagrams ---------- */
 
-#chart, #portfolio {
-  width: 50%; height: 400px;
-}
-
-/* ---------- trade form ---------- */
-
-#trade .form-control {
-  padding: .3rem .75rem;
-  border-radius: 0;
-}
-
-#trade .btn { margin: 0; }
-#trade input { font-size: 13px;}
-
-#trade .dropdown-menu {
-  font-size: 13px;
-  border-radius: 0;
-}
-
-/* ---------- suggested stock ---------- */
-
-.suggested {
-  width: calc(25% - 34px);
-  display: inline-block;
-  border-radius: 0;
-  border: solid 1px rgba(0,0,0,.3);
-  margin: 15px;
-  padding: 30px;
-}
-
-.suggested img {
-  height: 30px;
-  margin-bottom: 20px;
-  margin-top: 10px;
-}
-
-.suggested .fa { margin-left: 5px;}
-.suggested .fa.fa-arrow-circle-up { color: green;}
-.suggested .fa.fa-arrow-circle-down { color: red;}
+#chart, #portfolio { height: 300px;}
 
 /* ---------- footer ---------- */
 
-footer.page-footer { background: linear-gradient(to right, #161616, #373737);}
+footer { background: linear-gradient(to right, #161616, #373737);}
 footer h5 { opacity: .5;}
 footer a, footer p { font-size: 13px; opacity: .5;}
 footer a:hover { opacity: 1;}
