Switched to production client app

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,6 @@
 <h2>Welcome <span id="nick" class="nickname">{{user}}</span></h2>
-<script src="https://cdn.auth0.com/js/lock/11.3.0/lock.min.js"></script>
 <script>
-  var lock = new Auth0Lock('bodahlDFCL8Q6SqSyVM70QA5xWeTNgP3', 'devious.auth0.com', {
+  var lock = new Auth0Lock('aJPXuic5MPSYv35id6DoDxl7ZJJP2rtT', 'devious.auth0.com', {
     auth: {
     	domain: 'devious.auth0.com',
     	audience: 'https://devious.auth0.com/userinfo',
@@ -14,3 +13,4 @@
   });
 </script>
 <button onclick="lock.show();">Login</button>
+<button onclick="location.href='/logout';">Logout</button>
