--- a/views/layouts/nema-temp.handlebars
+++ b/views/layouts/nema-temp.handlebars
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Sign In with Auth0</title>
+  <title>Show Me The Money</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
