Removed sandbox files and updated to ES6

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-<h2>Welcome <span id="nick" class="nickname">{{user}}</span></h2>
+<h2>Welcome User</h2>
 <script>
   var lock = new Auth0Lock('aJPXuic5MPSYv35id6DoDxl7ZJJP2rtT', 'devious.auth0.com', {
     auth: {
