--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,9 +22,6 @@
 					  <a class="my-font-small nav-link waves-light active" data-toggle="tab" href="#panel-portfolio" role="tab"><i class="fa fa-user fa-2x" aria-hidden="true"></i><br>Portfolio</a>
 				  </li>
 				  <li class="nav-item">
-					  <a class="my-font-small nav-link waves-light" data-toggle="tab" href="#panel-market" role="tab"><i class="fa fa-heart fa-2x" aria-hidden="true"></i><br>Market</a>
-				  </li>
-				  <li class="nav-item">
 					  <a class="my-font-small nav-link waves-light" data-toggle="tab" href="#panel-history" role="tab"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i><br>History</a>
 				  </li>
 				  <li class="nav-item">
@@ -81,50 +78,50 @@
 					  {{/each}}
 				  </tbody>
 			  </table>
-	  </div>
 
-	  <!-- market -->
-	  <div class="tab-pane fade in show active" id="panel-market" role="tabpanel">
-		  <h3 class="mb-5">Major Index</h3>
-		  <div class="row mb-5">
-			  <div id="chart-market" class="col-6"></div>
-			  <table class="col-6 table table-hover text-center">
-				  <thead>
-					  <tr>
-						  <th class="text-left"></th>
-						  <th>Last</th>
-						  <th>Change</th>
-						  <th>% CHG</th>
-					  </tr>
-				  </thead>
-				  <tbody>
-					  {{#each market_index}}
-					  <tr>
-						  <td class="text-left">{{name}}</td>
-						  <td>{{last_price}}</td>
-						  <td>{{change}}</td>
-						  <td>{{chg}}</td>
-					  </tr>
-					  {{/each}}
-				  </tbody>
-			  </table>
-		  </div>
-
-		  <h3 class="mb-5 mt-5">Suggested Stocks</h3>
-		  <div class="row card-deck text-center">
-			  {{#each suggested_stock}}
-			  <div class="card suggested">
-				  <div class="card-body">
-					  <img src="{{ icon_src }}">
-					  <p><span class="profit">{{profit}}</span><i class="fa fa-arrow-circle-down"></i></p>
-					  <div>
-						  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
-						  <a class="btn btn-cyan btn-custom-small" href="#0">Trade</a>
+			  <h3 class="mb-5 mt-5">Suggested Stocks</h3>
+			  <div class="row card-deck text-center">
+				  <div class="card suggested">
+					  <div class="card-body">
+						  <img src="https://www-03.ibm.com/press/us/en/attachment/20190.wss?fileId=ATTACH_FILE2&fileName=ibmpos_blue.jpg">
+						  <p><span class="profit">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
+						  <div>
+							  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
+							  <a class="btn btn-cyan btn-custom-small" href="#0">Trade</a>
+						  </div>
+					  </div>
+				  </div>
+				  <div class="card suggested">
+					  <div class="card-body">
+						  <img src="https://www-03.ibm.com/press/us/en/attachment/20190.wss?fileId=ATTACH_FILE2&fileName=ibmpos_blue.jpg">
+						  <p><span class="profit">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
+						  <div>
+							  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
+							  <a class="btn btn-cyan btn-custom-small" href="#0">Trade</a>
+						  </div>
+					  </div>
+				  </div>
+				  <div class="card suggested">
+					  <div class="card-body">
+						  <img src="https://www-03.ibm.com/press/us/en/attachment/20190.wss?fileId=ATTACH_FILE2&fileName=ibmpos_blue.jpg">
+						  <p><span class="profit">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
+						  <div>
+							  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
+							  <a class="btn btn-cyan btn-custom-small" href="#0">Trade</a>
+						  </div>
+					  </div>
+				  </div>
+				  <div class="card suggested">
+					  <div class="card-body">
+						  <img src="https://www-03.ibm.com/press/us/en/attachment/20190.wss?fileId=ATTACH_FILE2&fileName=ibmpos_blue.jpg">
+						  <p><span class="profit">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
+						  <div>
+							  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
+							  <a class="btn btn-cyan btn-custom-small" href="#0">Trade</a>
+						  </div>
 					  </div>
 				  </div>
 			  </div>
-			  {{/each}}
-		  </div>
 	  </div>
 
 	  <!-- history -->
