--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,13 +36,13 @@
 
 				  <ul class="navbar-nav">
 					  <li class="nav-item">
-						  <a class="nav-link" href="#">Home</a>
+						  <a class="nav-link" href="/">Home</a>
 					  </li>
 					  <li class="nav-item">
-						  <a class="nav-link" href="#">My Account</a>
+						  <a class="nav-link" href="/user">My Account</a>
 					  </li>
 					  <li class="nav-item">
-						  <a class="nav-link" href="#">Logout</a>
+						  <a class="nav-link" href="/logout">Logout</a>
 					  </li>
 				  </ul>
 			  </div>
@@ -50,7 +50,7 @@
 	  </nav>
   </header>
 
-  {{{ user }}}
+  {{{ body }}}
 
   <!--footer-->
   <footer class="page-footer font-small pt-5 mt-4">
