--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 
-<!-- user panel -->
+<!-- user panel --->
   <section id="user" class="white-text">
 	  <div class="container">
 		  <div class="row">
