checking in for nema

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -77,10 +77,10 @@
 					  <th>Action</th>
 				  </tr>
 			  </thead>
-			  <tbody>
+			  {{!-- <tbody>
 				  {{#each stock_detail}}
 				  <tr>
-					  <td class="text-left">{{symbol}}<br><span class="my-font-small">{{company}}<span></td>
+					  <td class="text-left">{{stockID}}<br><span class="my-font-small">{{stockID}}<span></td>
 						  <td>{{quantity}}</td>
 						  <td>{{last_price}}</td>
 						  <td>{{price_paid}}</td>
@@ -93,12 +93,12 @@
 						  </td>
 					  </tr>
 					  {{/each}}
-				  </tbody>
+				  </tbody> --}}
 			  </table>
 	  </div>
 
 	  <!-- market -->
-	  <div class="tab-pane fade in show active" id="panel-market" role="tabpanel">
+	  {{!-- <div class="tab-pane fade in show active" id="panel-market" role="tabpanel">
 		  <h3 class="mb-5">Major Index</h3>
 		  <div class="row mb-5">
 			  <div id="chart-market" class="col-6"></div>
@@ -228,6 +228,6 @@
 				  </div>
 			  </div>
 		  </form>
-	  </div>
+	  </div> --}}
   </section>
 
