--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,38 +1,21 @@
-{{!-- 
-<button onclick="lock.show();">Login</button>
-<button onclick="location.href='/logout';">Logout</button>
-	</div> --}}
   <section id="user" class="white-text">
 	  <div class="container">
 		  <div class="row">
 			  <div class="col-6">
 				  <h3>My Account</h3>
-				  <p class="my-font-small">{{user_email}}</p>
+				  <p id="user_email" class="my-font-small"></p>
 			  </div>
 			  <div class="col-3">
 			  	<p class="my-font-small">Total Amount</p>
-				<p>${{user_value}}</p>
+				<p id="user_value"></p>
 			  </div>
 			  <div class="col-3">
 			  	<p class="my-font-small">Available Amount</p>
-				<p>${{user_available}}</p>
+				<p id="user_available"></p>
 			  </div>
 		  </div>
 		  <div class="row tabs-wrapper mt-4">
-			  <ul class="nav classic-tabs text-center" role="tablist">
-				  <li class="nav-item">
-					  <a class="my-font-small nav-link waves-light active" data-toggle="tab" href="#panel-portfolio" role="tab"><i class="fa fa-user fa-2x" aria-hidden="true"></i><br>Portfolio</a>
-				  </li>
-				  <li class="nav-item">
-					  <a class="my-font-small nav-link waves-light" data-toggle="tab" href="#panel-history" role="tab"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i><br>History</a>
-				  </li>
-				  <li class="nav-item">
-					  <a class="my-font-small nav-link waves-light" data-toggle="tab" href="#panel-trade" role="tab"><i class="fa fa-star fa-2x" aria-hidden="true"></i><br>Trade</a>
-				  </li>
-				  <li class="nav-item">
-					  <a class="my-font-small nav-link waves-light" data-toggle="tab" href="#panel-search" role="tab"><i class="fa fa-search fa-2x" aria-hidden="true"></i><br>Search</a>
-				  </li>
-			  </ul>
+			  {{> navbar}}
 		  </div>
 	  </div>
   </section>
@@ -47,8 +30,8 @@
 			  <div id="portfolio" class="col-4"></div>
 		  </div>
 		  <h3 class="mb-5">My Stocks</h3>
-		  <table class="table table-hover text-center">
-			  <thead>
+		  <table class="myStocks table table-hover text-center">
+		  	<thead>
 				  <tr>
 					  <th class="text-left">Symbol<br><span class="my-font-small">Company</span></th>
 					  <th>QTY</th>
@@ -60,31 +43,30 @@
 					  <th>Action</th>
 				  </tr>
 			  </thead>
-			  {{!-- <tbody>
-				  {{#each stock_detail}}
-				  <tr>
-					  <td class="text-left">{{stockID}}
-						  <br><span class="my-font-small">{{stockID}}<span>
-						  </td>
-					  <td class="text-left">{{stockID}}<br><span class="my-font-small">{{stockID}}<span></td>
-						  <td>{{quantity}}</td>
-						  <td class="{{stockId}}">{{last_price}}</td>
-						  <td>{{price_paid}}</td>
-						  <td>{{market_value}}</td>
-						  <td>{{total_gain}}</td>
-						  <td>{{profit}}</td>
-						  <td>
-							  <a class="btn btn-indigo btn-custom-small" href="#0">Chart</a>
-							  <a class="btn btn-cyan btn-custom-small" href="#0">Trade</a>
-						  </td>
-					  </tr>
-					  {{/each}}
-				  </tbody> --}}
-			  </table>
+			  <tbody>
+			  	{{#each stock_detail}}
+			  	<tr>
+			  		<td class="text-left">{{stockID}}</td>
+					<td>
+						<td>{{quantity}}</td>
+						{{!-- <td class="{{stockId}}">{{last_price}}</td> --}}
+						<td>{{price_paid}}</td>
+						<td>{{market_value}}</td>
+						<td>{{total_gain}}</td>
+						<td>{{profit}}</td>
+						<td>
+							<a class="btn btn-indigo btn-custom-small" href="#0">Chart</a>
+							<a class="btn btn-cyan btn-custom-small" href="#0">Trade</a>
+						</td>
+					</td>
+			  	</tr>
+			  	{{/each}}
+			  </tbody>
+		  </table>
 	  </div>
 
 	  <!-- market -->
-	  {{!-- <div class="tab-pane fade in show active" id="panel-market" role="tabpanel">
+	  <div class="tab-pane fade in show active" id="panel-market" role="tabpanel">
 		  <h3 class="mb-5">Major Index</h3>
 		  <div class="row mb-5">
 			  <div id="chart-market" class="col-6"></div>
@@ -109,123 +91,17 @@
 				  </tbody>
 			  </table>
 		  </div>
-
-			  <h3 class="mb-5 mt-5">Suggested Stocks</h3>
-			  <div class="row card-deck text-center">
-				  <div class="card suggested">
-					  <div class="card-body">
-						  <img src="https://www-03.ibm.com/press/us/en/attachment/20190.wss?fileId=ATTACH_FILE2&fileName=ibmpos_blue.jpg">
-						  <p><span class="profit">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
-						  <div>
-							  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
-							  <a class="btn btn-cyan btn-custom-small" href="#0">Trade</a>
-						  </div>
-					  </div>
-				  </div>
-				  <div class="card suggested">
-					  <div class="card-body">
-						  <img src="https://www-03.ibm.com/press/us/en/attachment/20190.wss?fileId=ATTACH_FILE2&fileName=ibmpos_blue.jpg">
-						  <p><span class="profit">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
-						  <div>
-							  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
-							  <a class="btn btn-cyan btn-custom-small" href="#0">Trade</a>
-						  </div>
-					  </div>
-				  </div>
-				  <div class="card suggested">
-					  <div class="card-body">
-						  <img src="https://www-03.ibm.com/press/us/en/attachment/20190.wss?fileId=ATTACH_FILE2&fileName=ibmpos_blue.jpg">
-						  <p><span class="profit">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
-						  <div>
-							  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
-							  <a class="btn btn-cyan btn-custom-small" href="#0">Trade</a>
-						  </div>
-					  </div>
-				  </div>
-				  <div class="card suggested">
-					  <div class="card-body">
-						  <img src="https://www-03.ibm.com/press/us/en/attachment/20190.wss?fileId=ATTACH_FILE2&fileName=ibmpos_blue.jpg">
-						  <p><span class="profit">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
-						  <div>
-							  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
-							  <a class="btn btn-cyan btn-custom-small" href="#0">Trade</a>
-						  </div>
-					  </div>
-				  </div>
-			  </div>
+			  {{> suggestedStock}}
 	  </div>
 
 	  <!-- history -->
 	  <div class="tab-pane fade" id="panel-history" role="tabpanel">
-		  <h3>Trade History</h3>
-		  <table class="table table-hover mt-5">
-			  <thead>
-				  <tr>
-					  <th>Date</th>
-					  <th>Action</th>
-					  <th>Symbol</th>
-					  <th>QTY</th>
-					  <th>Trade Price $</th>
-					  <th>Total $</th>
-				  </tr>
-			  </thead>
-			  <tbody>
-				  {{#each trade_history}}
-				  <tr>
-					  <td>{{date}}</td>
-					  <td>{{action}}</td>
-					  <td>{{symbol}}</td>
-					  <td>{{quantity}}</td>
-					  <td>{{price}}</td>
-					  <td>{{total}}</td>
-				  </tr>
-				  {{/each}}
-			  </tbody>
-		  </table>
+		  {{> history}}
 	  </div>
 
 	  <!-- trade -->
 	  <div class="tab-pane fade" id="panel-trade" role="tabpanel">
-		  <h3>Trade</h3>
-		  <form class="mt-5">
-			  <div class="form-row d-flex align-items-end">
-				  <div class="col">
-					  <label for="action" class="my-font-small">Action</label>
-					  <input type="text" class="form-control dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" name="action" placeholder="Buy/Sell">
-					  <div class="dropdown-menu col">
-						  <a class="dropdown-item" href="#">Buy</a>
-						  <a class="dropdown-item" href="#">Sell</a>
-						  <a class="dropdown-item" href="#">Something else</a>
-						  <div class="dropdown-divider"></div>
-						  <a class="dropdown-item" href="#">Separated link</a>
-					  </div>
-				  </div>
-				  <div class="col">
-					  <label for="action" class="my-font-small">Symbol</label>
-					  <input type="text" class="form-control dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" name="action" placeholder="eg. GOOG">
-					  <div class="dropdown-menu col">
-						  {{#each stock_detail}}
-						  <a class="dropdown-item" href="#">{{symbol}}</a>
-						  {{/each}}
-					  </div>
-				  </div>
-				  <div class="col">
-					  <label for="price" class="my-font-small">Price $</label>
-					  <input type="text" class="form-control" name="price" placeholder="$0.00">
-				  </div>
-				  <div class="col">
-					  <label for="qty" class="my-font-small">QTY</label>
-					  <input type="text" class="form-control" name="qty" placeholder="QTY">
-				  </div>
-				  <div class="col">
-					  <label for="total" class="my-font-small">Total</label>
-					  <input type="text" class="form-control" name="total" placeholder="$0.00">
-				  </div>
-				  <div class="col-12 mt-5">
-					  <a class="btn btn-indigo" href="#0" style="margin:0">Confirm</a>
-				  </div>
-			  </div>
-		  </form>
+		  {{> trade}}
 	  </div>
 
 	  <!-- search -->
@@ -242,6 +118,6 @@
 				  </div>
 			  </div>
 		  </form>
-	  </div> --}}
+	  </div>
   </section>
 
