--- a/views/partials/history.handlebars
+++ b/views/partials/history.handlebars
@@ -1,25 +1,5 @@
-<h3>Trade History</h3>
-		  <table class="table table-hover mt-5">
-			  <thead>
-				  <tr>
-					  <th>Date</th>
-					  <th>Action</th>
-					  <th>Symbol</th>
-					  <th>QTY</th>
-					  <th>Trade Price $</th>
-					  <th>Total $</th>
-				  </tr>
-			  </thead>
-			  <tbody>
-				  {{#each trade_history}}
-				  <tr>
-					  <td>{{date}}</td>
-					  <td>{{action}}</td>
-					  <td>{{symbol}}</td>
-					  <td>{{quantity}}</td>
-					  <td>{{price}}</td>
-					  <td>{{total}}</td>
-				  </tr>
-				  {{/each}}
-			  </tbody>
-		  </table>
+<div class="tab-pane fade" id="panel-history" role="tabpanel">
+	<h3>Trade History</h3>
+		<table class="userHistory table table-hover mt-5">
+		</table>
+	</div>
