--- a/views/partials/trade.handlebars
+++ b/views/partials/trade.handlebars
@@ -1,4 +1,5 @@
-<h3>Trade</h3>
+<div class="tab-pane fade" id="panel-trade" role="tabpanel">
+	<h3>Trade</h3>
 		  <form class="mt-5">
 			  <div class="form-row d-flex align-items-end">
 				  <div class="col">
@@ -38,3 +39,4 @@
 				  </div>
 			  </div>
 		  </form>
+		</div>
