--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,6 +25,7 @@
 	
 	  <!-- portfolio -->
 	  <div class="tab-pane fade in show active" id="panel-portfolio" role="tabpanel">
+		{{#if user_email}}
 		  <h3 class="mb-5">Portfolio</h3>
 		  <div class="row mb-5">
 			  <div id="chart-stock" class="col-8"></div>
@@ -62,10 +63,12 @@
 		  		{{/each}}
 		  	</tbody>
 		  </table>
+		  {{/if}}
 		  {{> suggestedStock}}
 	  </div>
 
 	<!-- history -->
+
 		{{> history}}
 
 	<!-- trade -->
