fixed portfolio route issue

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -66,6 +66,21 @@
 		  {{/if}}
 		  {{> suggestedStock}}
 	  </div>
+
+ 	<!-- history -->
+ 		{{> history}}
+ 
+ 	<!-- trade -->
+ 		{{> trade}}
+ 
+ 	<!-- search -->
+ 		{{> search}}
+ 
+ 	{{!-- suggested stock --}}
+ 		{{!-- {{> suggestedStock}} --}}
+ 
+ 	 
+ 
   </section>
   {{> footer}}
 
