signed up users create account

--- a/views/partials/suggestedStock.handlebars
+++ b/views/partials/suggestedStock.handlebars
@@ -3,7 +3,7 @@
   			  <div class="card suggested">
   				  <div class="card-body">
   					  <img src="https://www-03.ibm.com/press/us/en/attachment/20190.wss?fileId=ATTACH_FILE2&fileName=ibmpos_blue.jpg">
-  					  <p><span class="profit profit-fb">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
+  					  <p><span class="profit profit-fb">$18.22</span><i class="fa fa-arrow-circle-down"></i></p>
   					  <div>
   						  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
   						  <a class="btn btn-cyan btn-custom-small" href="#0">Buy</a>
@@ -13,7 +13,7 @@
   			  <div class="card suggested">
   				  <div class="card-body">
   					  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7c/Facebook_New_Logo_%282015%29.svg/2000px-Facebook_New_Logo_%282015%29.svg.png">
-  					  <p><span class="profit profit-f">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
+  					  <p><span class="profit profit-f">$158.90</span><i class="fa fa-arrow-circle-down"></i></p>
   					  <div>
   						  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
   						  <a class="btn btn-cyan btn-custom-small" href="#0">Buy</a>
@@ -23,7 +23,7 @@
   			  <div class="card suggested">
   				  <div class="card-body">
   					  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/31/USS.svg/1200px-USS.svg.png">
-  					  <p><span class="profit profit-x">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
+  					  <p><span class="profit profit-x">$48.22</span><i class="fa fa-arrow-circle-down"></i></p>
   					  <div>
   						  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
   						  <a class="btn btn-cyan btn-custom-small" href="#0">Buy</a>
@@ -33,7 +33,7 @@
   			  <div class="card suggested">
   				  <div class="card-body">
   					  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Ford_Motor_Company_Logo.svg/2000px-Ford_Motor_Company_Logo.svg.png">
-  					  <p><span class="profit profit-ibm">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
+  					  <p><span class="profit profit-ibm">$25.12</span><i class="fa fa-arrow-circle-down"></i></p>
   					  <div>
   						  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
   						  <a class="btn btn-cyan btn-custom-small" href="#0">Buy</a>
