attaching user id to email in html

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,7 @@
 		  <div class="row">
 			  <div class="col-6">
 				  <h3>My Account</h3>
-				  <p id="user_email" class="my-font-small">{{user_email}}</p>
+				  <p id="user_email" data-id={{id}} class="my-font-small">{{user_email}}</p>
 			  </div>
 			  <div class="col-3">
 			  	<p class="my-font-small">Total Amount</p>
