--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <title>Stock</title>
-  <link rel="shortcut icon" href="./images/favicon.png">
+  <link rel="shortcut icon" href="./images/favicon.ico">
 
   <!-- Font Awesome --->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
