--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <title>Stock</title>
-  {{!-- <link rel="shortcut icon" href="./public/images/favicon.ico"> --}}
+  <link rel="shortcut icon" href="images/favicon.ico">
 
   <!-- Font Awesome --->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -22,7 +22,6 @@
   <script src="./sockets.js"></script>
   <script src= "https://cdnjs.cloudflare.com/ajax/libs/Faker/3.1.0/faker.min.js"></script>
   <script src="https://cdn.auth0.com/js/lock/11.3.1/lock.min.js"></script>
-  <script src="./js/app.js"></script>
 </head>
 
 <body>
