--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,7 +22,7 @@
   </section>
 
   <section id="content" class="container tab-content card">
-	
+
 	  <!-- portfolio -->
 	  <div class="tab-pane fade in show active" id="panel-portfolio" role="tabpanel">
 		{{#if user_email}}
@@ -45,7 +45,7 @@
 		  			<th>Action</th>
 		  		</tr>
 		  	</thead>
-		  	<tbody class='userStocks'>
+		  	<tbody class='userStocks' id="my-stocks">
 		  		{{#each stock_detail}}
 		  		<tr>
 		  			<td>{{stockID}}</td>
@@ -69,18 +69,18 @@
 
  	<!-- history -->
  		{{> history}}
- 
+
  	<!-- trade -->
  		{{> trade}}
- 
+
  	<!-- search -->
  		{{> search}}
- 
+
  	{{!-- suggested stock --}}
  		{{!-- {{> suggestedStock}} --}}
- 
- 	 
- 
+
+
+
   </section>
   {{> footer}}
 
