--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,7 +29,7 @@
   <header>
 	  <nav class="navbar fixed-top navbar-expand-lg">
 		  <div class="container">
-			  <a class="navbar-brand" href="#"><strong>Site Name</strong></a>
+			  <a class="navbar-brand" href="#"><strong>ShowMoney</strong></a>
 			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menubar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				  <span class="navbar-toggler-icon"></span>
 			  </button>
