Added IDs to Available Balance and PortfolioValue

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,11 +6,11 @@
 				  <p id="user_email" data-id={{id}} class="my-font-small">{{user_email}}</p>
 			  </div>
 			  <div class="col-3">
-			  	<p class="my-font-small">Total Amount</p>
+			  	<p id="portfolioVal" class="my-font-small">Portfolio Value</p>
 				<p id="user_value">{{user_value}}</p>
 			  </div>
 			  <div class="col-3">
-			  	<p class="my-font-small">Available Amount</p>
+			  	<p id="availableBal" class="my-font-small">Available Balance</p>
 				<p id="user_available">{{user_available}}</p>
 			  </div>
 		  </div>
