--- a/views/partials/trade.handlebars
+++ b/views/partials/trade.handlebars
@@ -1,6 +1,6 @@
 <div class="tab-pane fade" id="panel-trade" role="tabpanel">
 		  <h3>Trade</h3>
-		  <form class="mt-5">
+		  <form id="error" class="mt-5">
 			  <div class="form-row d-flex align-items-end">
 				  <div class="col">
 					  <label for="action" class="my-font-small">Action</label>
