--- a/views/partials/suggestedStock.handlebars
+++ b/views/partials/suggestedStock.handlebars
@@ -5,7 +5,7 @@
   					  <img src="https://www-03.ibm.com/press/us/en/attachment/20190.wss?fileId=ATTACH_FILE2&fileName=ibmpos_blue.jpg">
   					  <p><span class="profit profit-ibm">$18.22</span><i class="fa fa-arrow-circle-down"></i></p>
   					  <div>
-  						  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
+  						  <a class="btn btn-indigo btn-custom-small btn-chart" href="#0" symbol="IBM">Detail</a>
   						  <a class="btn btn-cyan btn-custom-small" href="#0">Buy</a>
   					  </div>
   				  </div>
@@ -15,7 +15,7 @@
   					  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7c/Facebook_New_Logo_%282015%29.svg/2000px-Facebook_New_Logo_%282015%29.svg.png">
   					  <p><span class="profit profit-fb">$158.90</span><i class="fa fa-arrow-circle-down"></i></p>
   					  <div>
-  						  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
+  						  <a class="btn btn-indigo btn-custom-small btn-chart" href="#0" symbol="FB">Detail</a>
   						  <a class="btn btn-cyan btn-custom-small" href="#0">Buy</a>
   					  </div>
   				  </div>
@@ -25,7 +25,7 @@
   					  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/31/USS.svg/1200px-USS.svg.png">
   					  <p><span class="profit profit-x">$48.22</span><i class="fa fa-arrow-circle-down"></i></p>
   					  <div>
-  						  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
+  						  <a class="btn btn-indigo btn-custom-small btn-chart" href="#0" symbol="X">Detail</a>
   						  <a class="btn btn-cyan btn-custom-small" href="#0">Buy</a>
   					  </div>
   				  </div>
@@ -35,7 +35,7 @@
   					  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Ford_Motor_Company_Logo.svg/2000px-Ford_Motor_Company_Logo.svg.png">
   					  <p><span class="profit profit-f">$25.12</span><i class="fa fa-arrow-circle-down"></i></p>
   					  <div>
-  						  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
+  						  <a class="btn btn-indigo btn-custom-small btn-chart" href="#0" symbol="F">Detail</a>
   						  <a class="btn btn-cyan btn-custom-small" href="#0">Buy</a>
   					  </div>
   				  </div>
