Proper calculating and updating of available balance

--- a/views/partials/trade.handlebars
+++ b/views/partials/trade.handlebars
@@ -15,14 +15,14 @@
 				  </div>
 				  <div class="col">
 					  <label for="action" class="my-font-small">Symbol</label>
-					  <input id="buySymbol" type="text" class="form-control dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" name="action" placeholder="eg. GOOG">
-					  <div class="dropdown-menu col">
-						  <a class="dropdown-item" href="#">IBM</a>
+					  <input id="buySymbol" type="text" class="form-control dropdown-toggle" data-toggle="" aria-haspopup="true" aria-expanded="false" name="action" placeholder="eg. GOOG">
+					  <div class="col">
+						  {{!-- <a class="dropdown-item" href="#">IBM</a>
 						  <a class="dropdown-item" href="#">GOOG</a>
 						  <a class="dropdown-item" href="#">APPL</a>
 						  <a class="dropdown-item" href="#">NIK</a>
 						  <a class="dropdown-item" href="#">TGT</a>
-						  <a class="dropdown-item" href="#">BA</a>
+						  <a class="dropdown-item" href="#">BA</a> --}}
 					  </div>
 				  </div>
 				  <div class="col">
