--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -32,7 +32,9 @@
 	  <!-- portfolio -->
 	  <div class="tab-pane fade in show active" id="panel-portfolio" role="tabpanel">
 		
+		  {{#if user_email}}
 		  <h3 class="mb-5">Portfolio</h3>
+		  {{/if}}
 		  {{> charts}}
 		  {{#if user_email}}
 		  <h3 class="mb-5">My Stocks</h3>
